Add local images and update image links in recipe pages

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -11,8 +11,8 @@
 
     <h1>Fudgy Chocolate Brownies</h1>
 
-    <img src="https://www.allrecipes.com/thmb/ObeBrH6zuvd44Zrszx9kTMMs4p0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/10549-best-brownies-mfs-3x2-0369-2c4d297f62b74b6ea51f924a217adf64.jpg"
-        alt="Chocolate brownies" width="400">
+    <img src="../images/brownie.jpg" alt="Brownies" width="400">
+
 
     <h2>Description</h2>
     <p>
