--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,10 +9,11 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
-    <a href="../index.html">Home</a>
-    <h1>Lasagna</h1>
 
-    <img src="https://www.allrecipes.com/thmb/xyz123.jpg" alt="Lasagna Dish">
+
+
+    <img src="../images/lasagna.jpg" alt="Lasagna" width="400">
+
 
     <h2>Description</h2>
     <p>This lasagna is a hearty classic dish layered with cheese, meat, and tomato sauce.</p>
