--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -11,8 +11,9 @@
 
     <h1>Fresh Garden Salad</h1>
 
-    <img src="https://www.allrecipes.com/thmb/U1yPZpKqCToTL8i_mU2Q4GJbEWI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/14385-garden-salad-DDMFS-4x3-426bfa0f39a8493398e5e5b5d1223c14.jpg"
-        alt="Fresh garden salad" width="400">
+    <img src="../images/salad..jpg" alt="Salad" width="400">
+
+
 
     <h2>Description</h2>
     <p>
